--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
   "autoload": {
     "psr-4": {
       "PandaVideosPhpSdk\\": "src/",
-      "PandaVideosPhpSdk\\Traits\\": "src/traits/"
+      "PandaVideosPhpSdk\\Utils\\": "src/utils/",
+      "PandaVideosPhpSdk\\Modules\\": "src/modules/"
     }
   }
 }
